--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,16 +10,12 @@ services:
       - cache_data:/app/cache
     depends_on:
       - redis
+    env_file:
+      - .env      
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - OLLAMA_HOST=http://ollama:11434
       - CACHE_EXPIRY=604800
-      - AWS_REGION=us-east-1
-      - AWS_ENDPOINT=
-      - AWS_ACCESS_KEY_ID=
-      - AWS_SECRET_ACCESS_KEY=
-      - S3_STORAGE_BUCKET=
 
   worker:
     build:
@@ -29,17 +25,13 @@ services:
       - cache_data:/app/cache
     depends_on:
       - redis
+    env_file:
+      - .env      
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - OLLAMA_HOST=http://ollama:11434 # Must be accessible by the worker
       - CACHE_DIR=/app/cache
       - CACHE_EXPIRY=604800
-      - S3_STORAGE_BUCKET=
-      - AWS_ACCESS_KEY_ID=
-      - AWS_SECRET_ACCESS_KEY=
-      - AWS_REGION=us-east-1
-      - AWS_ENDPOINT=
 
   redis:
     image: redis:alpine
